# voice_noise_cancellation

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FrequencyDomain.cpp  Settings.c  Settings.h  SpeechProcessing.c  SpeechProcessing.h
app/src/main/cpp/CommonHeaders/: abs.c  abs.h  power.c  power.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtwutil.c  rtwutil.h
app/src/main/cpp/DynamicRangeMultibandCompression/: DynamicRangeFiveBandCompression.c  DynamicRangeFiveBandCompression.h  DynamicRangeFiveBandCompression_initialize.c  DynamicRangeFiveBandCompression_initialize.h  DynamicRangeFiveBandCompression_rtwutil.c  DynamicRangeFiveBandCompression_rtwutil.h  DynamicRangeFiveBandCompression_terminate.c  DynamicRangeFiveBandCompression_terminate.h  DynamicRangeFiveBandCompression_types.h  FiveBandCrossoverFilter.c  FiveBandCrossoverFilter.h  SystemCore.c  SystemCore.h  compressor.c  compressor.h  crossoverFilter.c  crossoverFilter.h  designLPHPFilter.c  designLPHPFilter.h  filter.c  filter.h  mod.c  mod.h  repmat.c  repmat.h  sort1.c  sort1.h  sortIdx.c  sortIdx.h  tuneCrossoverFilterCoefficients.c  tuneCrossoverFilterCoefficients.h
app/src/main/cpp/NoiseReductionCode/: bluesteinSetup.c  bluesteinSetup.h  fft.c  fft.h  fft1.c  fft1.h  rdivide.c  rdivide.h  sqrt.c  sqrt.h  wiener_ADAPTIVE_NE.c  wiener_ADAPTIVE_NE.h  wiener_ADAPTIVE_NE_data.c  wiener_ADAPTIVE_NE_data.h  wiener_ADAPTIVE_NE_emxutil.c  wiener_ADAPTIVE_NE_emxutil.h  wiener_ADAPTIVE_NE_initialize.c  (+4 more)
(+13 files in other folders)
